Made some small changes

--- a/src/defaultSettings.scss
+++ b/src/defaultSettings.scss
@@ -23,7 +23,7 @@
   --members-width: 240px;
   --background-shading: 100%;
   --background-overlay: rgba(0, 0, 0, 0.6);
-  --background-image: url(https://clearvision.github.io/images/sapphire.jpg);
+  --background-image: url(../wallpapers/night.png);
   --background-position: center;
   --background-size: cover;
   --background-repeat: no-repeat;
