--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,4 +1,4 @@
-// CLEARVISION VARIABLES
+// CLEARVISION/Revontheus VARIABLES
 $cv: (
   // CONSTANTS
   constants:
@@ -12,12 +12,12 @@ $cv: (
       ),
       text: (
         titlebar: (
-          main: 'ClearVision',
+          main: 'Revontheus',
           version: 'v#{$version}',
           short: 'CV',
         ),
         account: (
-          main: 'ClearVision',
+          main: 'Revontheus',
           version: 'v#{$version}',
         ),
       ),
