--- a/src/defaultSettings.scss
+++ b/src/defaultSettings.scss
@@ -23,7 +23,7 @@
   --members-width: 240px;
   --background-shading: 100%;
   --background-overlay: rgba(0, 0, 0, 0.6);
-  --background-image: url(../https://github.com/rjgrl/ClearVision-v6/blob/b3aa17e59b45c25288e843f8ad6d536be87f23b0/wallpapers/night.png/night.png);
+  --background-image: url(https://raw.githubusercontent.com/rjgrl/ClearVision-v6/main/wallpapers/night.png);
   --background-position: center;
   --background-size: cover;
   --background-repeat: no-repeat;
