--- a/src/defaultSettings.scss
+++ b/src/defaultSettings.scss
@@ -1,7 +1,7 @@
 /* DEFAULT SETTINGS */
 :root {
-  --main-color: #2780e6;
-  --hover-color: #1e63b3;
+  --main-color: #2a8dfd;
+  --hover-color: #BAC5D1;
   --success-color: #43b581;
   --danger-color: #982929;
   --channel-unread: var(--main-color);
@@ -48,7 +48,7 @@
   --backdrop-grayscale: var(--background-grayscale);
   --backdrop-sepia: var(--background-sepia);
   --backdrop-blur: var(--background-blur);
-  --user-popout-image: var(--background-image);
+  --user-popout-image: url(https://raw.githubusercontent.com/rjgrl/ClearVision-v6/main/wallpapers/comet.png);
   --user-popout-position: var(--background-position);
   --user-popout-size: var(--background-size);
   --user-popout-repeat: var(--background-repeat);
@@ -61,7 +61,7 @@
   --user-popout-sepia: var(--background-sepia);
   --user-popout-blur: calc(var(--background-blur) + 3px);
   --user-popout-overlay: rgba(0, 0, 0, 0.65);
-  --user-modal-image: var(--background-image);
+  --user-modal-image: url(https://raw.githubusercontent.com/rjgrl/ClearVision-v6/main/wallpapers/comet.png);
   --user-modal-position: var(--background-position);
   --user-modal-size: var(--background-size);
   --user-modal-repeat: var(--background-repeat);
